# floodlight

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  flake.nix  shell.nix
.cache/clangd/index/: StringDistance.cpp.D02981789136F881.idx  StringDistance.h.6488D85281423D53.idx  StringUtils.cpp.405473477EC7C6E0.idx  StringUtils.h.B4B495E127F76829.idx  components.cpp.24F49305369F87E0.idx  components.h.C800DCCF876BC503.idx  flood.cpp.47020AEE78AF28AE.idx  light.cpp.725B7AC32F45A524.idx
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Flood/: CMakeLists.txt  Makefile  cmake_install.cmake  flood.cpp
src/Flood/libStringDistance/: Makefile  StringDistance.cpp  StringDistance.h  cmake_install.cmake
src/Flood/libStringUtils/: CMakeLists.txt  Makefile  StringDistance.cpp  StringDistance.h  StringUtils.cpp
src/Light/: CMakeCache.txt  CMakeLists.txt  Makefile  components.cpp  light.cpp  lightGui.cpp
src/Light/include/: components.h  lightGui.h
src/libImGui/: CMakeLists.txt  ImGui.cpp  ImGui.h  Makefile
